--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -29,14 +29,14 @@
                 </form>
             </section>
 
-            <section>
+            <section class="result">
                 <strong>Form Results:</strong>
-                <div id="text"></div>
-                <div id="agreement"></div>
-                <div id="subjectivity"></div>
-                <div id="confidence"></div>
-                <div id="irony"></div>
-                <div id="score_tag"></div>
+                <div>Text: <span id="text"></span></div>
+                <div>Agreement: <span id="agreement"></span></div>
+                <div>Subjectivity: <span id="subjectivity"></span></div>
+                <div>Confidence: <span id="confidence"></span></div>
+                <div>Irony: <span id="irony"></span> </div>
+                <div>Score_tag: <span id="score_tag"></span></div>
               </section>
         </main>
 
